--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@ Options -Indexes
 RewriteEngine On
 # pages
 RewriteRule ^([a-z-]+).html$ /?page=$1 [L]
-RewriteRule ^activite/([a-z-]+).html /?page=activite&url=$1 [L]
-RewriteRule ^([a-z-]+)/([a-z-]+).html /?page=$1&rel=$2 [L]
+RewriteRule ^activite/([a-z0-9-]+)([\-0-9]{0,2}).html$ /?page=activite&url=$1$2 [L]
+RewriteRule ^([a-z-]+)/([a-z-]+).html$ /?page=$1&rel=$2 [L]
 # admin
 RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
 RewriteRule ^admin/(.*)$ http://admin.fsc.localhost.local/$1 [QSA,L,R]
