--- a/inscription/.htaccess
+++ b/inscription/.htaccess
@@ -1,6 +1,6 @@
-Options -Indexes
-
 RewriteEngine On
-# pages
-RewriteRule ^([a-z]+)((-([0-9]+))*).html$ /?page=$1&id=$4 [L]
-RewriteRule ^([a-z]+)((-([a-z]+))*).html$ /?page=$1&rel=$4 [L]
+
+RewriteRule ^([a-z]+)((-([0-9]+))*)$ /?page=$1&id=$4 [L]
+RewriteRule ^([a-z]+)((-([a-z]+))*)$ /?page=$1&rel=$4 [L]
+RewriteRule ^([a-z]+)((-([0-9]+))*)/$ /$1-$4 [L,R]
+RewriteRule ^([a-z]+)((-([a-z]+))*)/$ /$1-$4 [L,R]
