--- a/.htaccess
+++ b/.htaccess
@@ -6,19 +6,13 @@ Options -Indexes
 
 RewriteEngine On
 # pages
-RewriteRule ^([a-z-]+)/$ /?page=$1 [L]
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /?page=$1&rel=$2 [L]
-RewriteRule ^([a-z-]+)$ /$1/ [L,R]
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /$1/$2/ [L,R]
+RewriteRule ^([a-z-]+)/$ /?page=$1
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /?page=$1&rel=$2
+RewriteRule ^([a-z-]+)$ /$1/ [R]
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /$1/$2/ [R]
 # img
 RewriteRule ^uploads/activities/default.jpg$ /img/logo/fsc-210x135.png
 # api
 RewriteRule ^api/([a-z-]+)\.json$ /api/$1.php
-# gestion
-RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
-RewriteRule ^gestion/(.*)$ http://gestion.fsc.localhost.local/$1 [QSA,L,R]
-# inscription
-RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
-RewriteRule ^inscription/(.*)$ http://inscription.fsc.localhost.local/$1 [QSA,L,R]
 
 ErrorDocument 404 /index.php?page=404
