--- a/gestion/.htaccess
+++ b/gestion/.htaccess
@@ -1,1 +1,4 @@
-RewriteEngine Off
+RewriteEngine On
+
+RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
+RewriteRule ^(.*) http://gestion.fsc.localhost.local/$1 [QSA,L,R]
