--- a/inscription/.htaccess
+++ b/inscription/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^([a-z]+)((-([0-9]+))*)$ /?page=$1&id=$4 [L]
-RewriteRule ^([a-z]+)((-([a-z]+))*)$ /?page=$1&rel=$4 [L]
-RewriteRule ^([a-z]+)((-([0-9]+))*)/$ /$1-$4 [L,R]
-RewriteRule ^([a-z]+)((-([a-z]+))*)/$ /$1-$4 [L,R]
+RewriteRule ^([a-z]+)((-([0-9]+))*)/$ /?page=$1&id=$4
+RewriteRule ^([a-z]+)((-([a-z]+))*)/$ /?page=$1&rel=$4
+RewriteRule ^([a-z]+)((-([0-9]+))*)$ /$1-$4/ [R]
+RewriteRule ^([a-z]+)((-([a-z]+))*)$ /$1-$4/ [R]
+
+RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
+RewriteRule ^(.*) http://inscription.fsc.localhost.local/$1 [QSA,L,R]
