--- a/inscription/.htaccess
+++ b/inscription/.htaccess
@@ -1,9 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^([a-z]+)((-([0-9]+))*)/$ /?page=$1&id=$4
-RewriteRule ^([a-z]+)((-([a-z]+))*)/$ /?page=$1&rel=$4
-RewriteRule ^([a-z]+)((-([0-9]+))*)$ /$1-$4/ [R]
-RewriteRule ^([a-z]+)((-([a-z]+))*)$ /$1-$4/ [R]
+RewriteRule ^([a-z-]+)/$ /?page=$1
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /?page=$1&rel=$2
+RewriteRule ^([a-z-]+)$ /$1/ [R]
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /$1/$2/ [R]
 
 RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
 RewriteRule ^(.*) http://inscription.fsc.localhost.local/$1 [QSA,L,R]
