--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,10 @@ Options -Indexes
 
 RewriteEngine On
 # pages
-RewriteRule ^([a-z-]+)/$ /?page=$1
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /?page=$1&rel=$2
-RewriteRule ^([a-z-]+)$ /$1/ [R]
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /$1/$2/ [R]
+RewriteRule ^([a-z-]+)/?$ /?page=$1
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)/?$ /?page=$1&rel=$
+RewriteRule ^([a-z-]+)/$ /$1 [R,L]
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /$1/$2 [R,L]
 # img
 RewriteRule ^uploads/activities/default.jpg$ /img/logo/fsc-210x135.png
 # api
