--- a/inscription/.htaccess
+++ b/inscription/.htaccess
@@ -1,9 +1,10 @@
 RewriteEngine On
 
-RewriteRule ^([a-z-]+)/$ /?page=$1
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /?page=$1&rel=$2
-RewriteRule ^([a-z-]+)$ /$1/ [R]
-RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /$1/$2/ [R]
+RewriteRule ^([a-z-]+)$ /?page=$1
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)$ /?page=$1&rel=$2
+RewriteRule ^([a-z-]+)/(.+)/([a-zA-Z0-9-]+)$ /?page=$1&rel=$2&data=$3
+RewriteRule ^([a-z-]+)/$ /$1 [R,L]
+RewriteRule ^([a-z-]+)/([a-z0-9-]+)/$ /$1/$2 [R,L]
 
 RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
 RewriteRule ^(.*) http://inscription.fsc.localhost.local/$1 [QSA,L,R]
