--- a/gestion/.htaccess
+++ b/gestion/.htaccess
@@ -1,4 +1,10 @@
-RewriteEngine On
+## OVH
+SetEnv PHP_VER 5_4
+SetEnv SESSION_USE_TRANS_SID 0
 
-RewriteCond %{HTTP_HOST} ^fsc.localhost.local$
-RewriteRule ^(.*) http://gestion.fsc.localhost.local/$1 [QSA,L,R]
+## Security
+Options -Indexes
+
+## Document errors
+ErrorDocument 404 /index.php?page=404
+ErrorDocument 403 /index.php?page=403
