--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,9 @@
+## OVH
+SetEnv PHP_VER 5_4
+SetEnv SESSION_USE_TRANS_SID 0
+
 ## Security
+SetEnv REGISTER_GLOBALS 0
 Options -Indexes
 
 ## Cross-site allowed for webfonts with Firefox
