--- a/static/.htaccess
+++ b/static/.htaccess
@@ -11,6 +11,7 @@ RewriteRule ^favicon.ico$ /img/favicon/round_16.ico
 RewriteRule ^favicon.png$ /img/favicon/round_32.png
 RewriteRule ^apple-touch-icon.png$ /img/logo/fsc-128x128.png
 RewriteRule ^uploads/activities/default.jpg$ /img/logo/fsc-210x135.png
+RewriteRule ^uploads/activities/([0-9]+)-([a-zA-Z0-9-]+)\.jpg$ /uploads/activities/$1.jpg
 
 # Cross-site allowed
 <FilesMatch "\.(ttf|otf|eot|woff)$">
